--- a/common.css
+++ b/common.css
@@ -22,4 +22,36 @@ input{
 	border: medium #c0c0c0 dotted;
 	outline:none;
 }
+.progressbar{
+	height: 14px;
+	background: gray;
+	border-radius:7px;
+	position:relative;
+}
+.progressbar .bar_back{
+	height: 8px;
+	background:white;
+	border-radius:5px;
+	position:absolute;
+	margin:auto auto auto 5px;
+	width: 99%;
+	top:0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+.progressbar .bar{
+	height: 8px;
+	background:yellow;
+	border-radius:5px;
+	position:absolute;
+	margin:auto auto auto 5px;
+	width: 99%;
+	top:0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
 
