--- a/common.css
+++ b/common.css
@@ -19,7 +19,8 @@ main{
     text-align:center;
 }
 input{
-	border: medium #c0c0c0 dotted;
+	border: none;
+	/* border: underline #c0c0c0; */
 	outline:none;
 }
 .progressbar{
@@ -33,7 +34,7 @@ input{
 	background:white;
 	border-radius:5px;
 	position:absolute;
-	margin:auto auto auto 5px;
+	margin:auto auto auto auto;
 	width: 99%;
 	top:0;
 	right: 0;
@@ -43,10 +44,11 @@ input{
 
 .progressbar .bar{
 	height: 8px;
-	background:yellow;
+	background:springgreen;
 	border-radius:5px;
 	position:absolute;
-	margin:auto auto auto 5px;
+	margin:auto auto auto auto;
+	padding: auto;
 	width: 99%;
 	top:0;
 	right: 0;
