--- a/common.css
+++ b/common.css
@@ -55,5 +55,19 @@ input{
 	bottom: 0;
 	left: 0;
 }
+/*‰~‚Ì•`‰æ*/
+.circle{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:10% auto;
+    width:80px;
+    height:80px;
+    line-height:80px;
+    border-radius:50%;
+    border:solid 3px red;
+}
 
 
