--- a/common.css
+++ b/common.css
@@ -2,6 +2,7 @@ body{
 	background:aquamarine;
     margin: 0;
 	text-align:center;
+    font-size:3em;
 }
 header{
 	background:lightgreen;
@@ -22,6 +23,10 @@ input{
 	border: none;
 	/* border: underline #c0c0c0; */
 	outline:none;
+    width:50%;
+    font-size:1.5em;
+    border-bottom:solid 1px;
+
 }
 .progressbar{
 	height: 14px;
